# RTCPilot

./: .gitignore  CMakeLists.txt  dtls_disable.md  dtls_implementation_summary.md  dtls_srtp_relation.md  dtls_webrtc_port.md  ice_stun.md  libsrtp_usage_summary.md  rtc_relay.md  webrtc2rtmp-flv.md
Properties/: launchSettings.json
RTCPilot/: RTCPilot.vcxproj  RTCPilot.vcxproj.filters  config.yaml  config1.yaml
pilot_center/: README.md
pilot_center-go/: config.yaml  go.mod  go.sum  pilot_center.go
pilot_center-go/client/: client.go  test_all_requests.go  test_debug.go  test_http.go  test_join_push.go  test_simple.go  test_single_request.go
pilot_center-go/config/: config.go
pilot_center-go/logger/: logger.go
pilot_center-go/msu/: msu.go  msu_mgr.go
pilot_center-go/room/: push_info.go  room.go  room_mgr.go  rtp_param.go  user.go
pilot_center-go/websocket_protoo/: message.go  proto.go  server.go  session.go
pilot_center/llm_client/: llm_client.py
pilot_center/room/: room.py  room_mgr.py
pilot_center/websocket_protoo/: ws_protoo_session.py
src/: RTCPilot.cpp
src/config/: config.cpp  config.hpp
src/net/tcp/: ssl_server.hpp
src/webrtc_room/: README.md  media_puller.cpp  media_pusher.cpp  room.cpp  rtc_info.hpp  rtc_recv_relay.cpp  rtc_recv_relay.hpp  rtc_send_relay.cpp  rtc_send_relay.hpp  rtp_session.hpp  sdp.md
src/ws_message/: README.md
src/ws_stream/: README.md
tests/: ws_protoo_client_test.cpp
